<resources>
    <string name="app_name">Cattle</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_draft">Draft</string>
    <string name="nav_item_setting">Setting</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_test_field">Test Field</string>
    <string name="nav_item_test_profile">Test Profile</string>
    <string name="nav_item_debug">Debug</string>

    <string name="page_title_home">Home</string>
    <string name="page_title_mention">Mention</string>
    <string name="page_title_direct_message">Direct Message</string>
    <string name="page_title_detail">Detail</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <string name="text_photo_only_status">Uploaded new photo</string>

    <string name="hint_compose_new_fanfou">Write something new</string>
    <string name="hint_no_album_photos">No album photos yet</string>
    <string name="hint_no_more_album_photos">No more album photos</string>

    <string name="text_mention_button">\@</string>
    <string name="text_hash_tag_button">#</string>


    <!-- Profile -->
    <string name="text_self_intro">Self intro：</string>
    <string name="text_following">Following</string>
    <string name="text_follower">Follower</string>
    <string name="text_favourite">Favourite</string>
    <string name="text_status">Status</string>
    <string name="title_album">Album</string>
    <string name="title_status_list">All statuses · %1$d</string>
    <string name="text_locked_profile">This account is locked</string>
    <string name="text_only_open_to_follower">Only show statuses to followers. \nTap the follow button to send follow request.</string>

    <!-- FollowerList -->
    <string name="title_follower_list">Follower list</string>

    <!-- Status Operations -->
    <string name="text_comment">Comment</string>
    <string name="text_retweet">Retweet</string>
    <string name="text_save">Save</string>
    <string name="text_share">Share</string>

    <!-- Status Context -->
    <string name="text_status_context">Status context</string>

    <!-- Preference -->
    <string name="pref_title">Settings</string>
    <string name="pref_title_locale">Locale</string>
    <string name="pref_item_language">Language</string>
    <string name="pref_language_default">Follow system locale</string>

    <string name="text_which_language">Which language?</string>
    <string name="text_language_default">Default</string>
    <string name="text_language_english">English</string>
    <string name="text_language_chinese_simple">Chinese Simple</string>

    <!-- Debug -->
    <string name="debug_pref_title_network">Network</string>
    <string name="pref_retrofit_log_level">retrofit_log_level</string>

    <string name="label_shortcut_compose">Compose</string>

</resources>
