<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/nav_item_profile"/>

        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/icon_draft"
            android:title="@string/nav_item_draft"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/nav_item_setting"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/nav_item_about"/>

        <item
            android:id="@+id/nav_test_field"
            android:icon="@drawable/icon_about"
            android:title="@string/nav_item_test_field"/>

        <item
            android:id="@+id/nav_test_profile"
            android:icon="@drawable/icon_about"
            android:title="@string/nav_item_test_profile"/>
        <item
            android:id="@+id/nav_debug_setting"
            android:icon="@drawable/icon_debug"
            android:title="@string/nav_item_debug"/>
    </group>
</menu>