<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="status"
            type="io.github.anthonyeef.cattle.data.statusData.Status" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include layout="@layout/toolbar_home"/>

        <EditText
            android:id="@android:id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/horizontal_padding_normal"
            android:paddingTop="@dimen/vertical_padding_normal"
            android:paddingBottom="@dimen/vertical_padding_normal"
            android:paddingRight="@dimen/horizontal_padding_normal"
            android:background="?android:colorBackground"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:hint="@string/hint_compose_new_fanfou"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingRight="@dimen/padding_normal"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@id/location"
                android:layout_width="@dimen/compose_action_size"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_normal"
                android:background="?android:selectableItemBackground"
                android:tint="@color/grey600"
                app:srcCompat="@drawable/icon_location"/>

            <ImageButton
                android:id="@id/camera"
                android:layout_width="@dimen/compose_action_size"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_normal"
                android:background="?android:selectableItemBackground"
                android:tint="@color/grey600"
                app:srcCompat="@drawable/icon_camera"/>

            <ImageButton
                android:id="@id/image"
                android:layout_width="@dimen/compose_action_size"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_normal"
                android:background="?android:selectableItemBackground"
                android:tint="@color/grey600"
                app:srcCompat="@drawable/icon_photo"/>

            <Button
                android:layout_width="@dimen/compose_action_size"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:textColor="@color/grey600"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                android:gravity="center"
                android:background="?android:selectableItemBackground"
                android:text="@string/text_mention_button"/>

            <Button
                android:layout_width="@dimen/compose_action_size"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:textColor="@color/grey600"
                android:textStyle="bold"
                android:gravity="center"
                android:background="?android:selectableItemBackground"
                android:text="@string/text_hash_tag_button"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="send"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>
</layout>